# pxltdphbot

./: .replit  LICENSE  README.md  launcher.py  pyproject.toml
lib/bot/: bot.py
src/bot/: bot.py
src/cogs/: example.py  joke.py  randomgame.py
