[tool.poetry]
name = "repl_python3_pxltdphbot"
version = "0.1.0"
description = ""
authors = ["kirbysebastian <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.9.1"
discord = "^1.7.3"
httplib2 = "^0.20.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
